# TestPydanticWorkflow

./: README.md  ROADMAP.md  main.py  mkdocs.yml  mono_blueprint.py  pyproject.toml  run_email_feedback.py
docs/: index.md  roadmap.md
docs/architecture/: overview.md
docs/examples/: writer-reviewer.md
docs/getting-started/: first-workflow.md  installation.md
docs/workflow-definition/: conditions.md  data-flow.md  syntax.md  tools-guide.md
dynamic_workflow/: main.py
dynamic_workflow/domain/entities/: node_type.py
dynamic_workflow/domain/interfaces/: i_agent.py  i_agent_factory.py  i_worflow_executor.py  i_workflow_converter.py
dynamic_workflow/src/application/services/: workflow_service.py
dynamic_workflow/src/blueprints/: __init__.py  development_workflow.json  hiring_workflow.json  workflow_definitions.py  writer_reviewer_workflow.json
dynamic_workflow/src/domain/entities/: workflow_definition.py  workflow_edge.py
src/blueprints/: __init__.py  workflow_definitions.py
src/core/: __init__.py  condition_evaluator.py
src/domain/entities/: workflow_node.py
src/domain/interfaces/: i_agent.py  i_agent_factory.py
src/infrastructure/agents/: pydantic_agent.py
src/infrastructure/converters/: workflow_converter.py
src/infrastructure/executors/: workflow_executor.py
src/infrastructure/factories/: agent_factory.py
src/infrastructure/tools/: __init__.py  base_tools.py  business_tools.py  tool_registry.py
src/infrastructure/tools/custom/: content_tools.py
static_graph/: genai_email_feedback.py
static_workflow/: genai_email_feedback.py
(+3 files in other folders)
