[project]
name = "testpydanticworkflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "pydantic-ai>=0.3.4",
    "pydantic-graph>=0.3.4",
    "pymdown-extensions>=10.16",
]
